# prockit

./: Cargo.toml  design_doc.md  readme.md
crates/framework/: Cargo.toml  readme.md
crates/framework/docs/: HIERARCHICAL_NODES_GUIDE.md  HIERARCHICAL_NODES_PLAN.md  IMPLEMENTATION_PROVIDES.md  lifetime_based_currying.md  plan_hierarchy_revision.md  plan_provider_map.md  plan_saving.md  plan_sweeps.md
crates/framework/docs/historical/: hierarchy.rs  plan_hierarchy.md  plan_provides.md  space_module.rs
crates/framework/examples/: voxels.rs
crates/framework/reference/: lib.rs  mod_entry.rs  names.rs  provides.rs  simple_example.rs
crates/framework/src/: experiment.rs  generate.rs  lib.rs  names.rs  placement.rs  plugins.rs  pod.rs  pool.rs  provider.rs  provides.rs  registry.rs  resample.rs  rework.rs  spaces.rs  subdivide.rs
crates/framework/src/provides/: mod.rs  names.rs  provider.rs  provides.rs  queries.rs  signature.rs
crates/framework/src/space/: allocations.rs  defs.rs  generate.rs  implementations.rs  mod.rs  resample.rs  trade.rs
crates/graphics_testing/: model.rs  shader.wgsl
crates/linter/: Cargo.toml  readme.md
crates/rasterless/: Cargo.toml  readme.md
crates/rasterless/graphics_testing/src/: graphics_context.rs  main.rs
crates/rasterless/src/: app.rs  camera.rs  compute.wgsl  graphics.rs  main.rs
crates/skeletons/: Cargo.toml  readme.md
crates/skeletons/examples/: bone_lod.rs
crates/skeletons/src/: bone.rs  generators.rs  gizmos.rs  lib.rs  skeleton.rs
crates/sweeps/: Cargo.toml  readme.md
crates/volume/: Cargo.toml  readme.md
crates/volume/examples/: fpv.rs
crates/volume/src/: chunk.rs  cubic_direction.rs  lib.rs  octant.rs  volume.rs  voxel.rs
crates/volume/src/chunk/: chunk_index.rs  chunk_position.rs  face.rs  mesh.rs  mod.rs  position.rs  rules.rs  simple_normal.rs  storage.rs  voxel_tag.rs
crates/volume/src/reference/: chunk_meshing.rs  mark_vochs.rs  mesh.rs  voxel.rs
crates/volume/src/volume/: merge.rs  mod.rs  split.rs  viewer.rs
crates/voxel_store/: Cargo.toml  readme.md
crates/voxel_store/examples/: bevy.rs  simple.rs
crates/voxel_store/src/: bevy_console.rs  chunk.rs  lib.rs  voxel.rs  voxel_store.rs
crates/voxels/: Cargo.toml  readme.md
crates/voxels/benches/: chunk.rs
crates/voxels/src/: chunk.rs  gizmos.rs  lib.rs  voxel.rs
crates/voxels/src/temp/: bevy.rs  chunk.rs  sampler.rs  voxel_store.rs
docs/: AGENTS.md  bevy_map.md  mvp.md  mysty.md
examples/: simple.rs
src/: camera.rs  compute.wgsl  graphics.rs  lib.rs  main.rs  voxel_store.rs
