[package]
name = "rasterless"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "graphics", "rendering"]
description = "Experiments with volumetric, raymarching, and 'rasterless' rendering which may eventually become a game platform."
exclude = [".github/", "crates/", "assets/"]
keywords = ["raymarching", "game", "engine", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
repository = "placeholder"
documentation = "placeholder"

[dependencies]
ndshape = "0.3"
wgpu = "0.20"
winit = "0.30"
log = "0.4"
voxel_store = { path = "./crates/voxel_store", version = "0.1", features = ["bevy"] }
env_logger = "0.11"
pollster = "0.3"
glam = "0.28"
bytemuck = "1.16"
encase = { version = "0.9", features = ["glam"] }

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_state",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "ktx2",
    "smaa_luts",
    "hdr",
    "tonemapping_luts",
    "vorbis",
    "x11",
    "zstd"
]

[profile.dev.package.bevy]
opt-level = 2
features = ["dynamic_linking"]

[profile.dev.package.'*']
opt-level = 2

[profile.release]
opt-level = 3

[workspace]
members = ["crates/*"]