[package]
name = "prockit"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "game-development", "graphics", "rendering"]
description = "A set of tools for procedurally generating assets and scenes for game development."
exclude = [".github/", "crates/", "assets/"]
keywords = ["raymarching", "game", "engine", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
repository = "placeholder"
documentation = "placeholder"

[dependencies]
bevy = "0.14"

[profile.dev.package.bevy]
features = ["dynamic_linking"]

[profile.dev.package.'*']
opt-level = 2

[profile.release]
opt-level = 3

[workspace]
members = ["crates/*"]