[package]
name = "prockit_framework"
version = "0.1.0"
edition = "2024"
categories = ["game-engines", "game-development", "graphics", "rendering"]
description = "The backbone for a set of tools for procedurally generating assets and scenes for game development."
keywords = ["game", "engine", "graphics", "bevy", "procedural"]
license = "LGPL-3.0-or-greater"
repository = "https://github.com/soundeffects/prockit/tree/main/crates/framework"
documentation = "placeholder"

[dependencies]
bevy = "0.18"
get-size2 = { version = "0.7.3", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"

[dev-dependencies]
block-mesh = "0.2"
