[package]
name = "prockit_skeletons"
version = "0.1.0"
edition = "2021"
categories = ["game-development", "graphics", "rendering"]
description = "Generating meshes from tree structures."
keywords = ["skinning", "tree", "curve", "mesh", "procedural", "geometry"]
license = "MIT OR Apache-2.0"
repository = "placeholder"
documentation = "placeholder"

[dependencies]
bevy = "0.14"
bevy_console = { git = "https://github.com/msklosak/bevy-console.git", branch = "bevy_014", optional = true }
clap = { version = "4.5", optional = true }

[profile.dev.package.bevy]
features = ["dynamic_linking"]

[profile.dev.package.'*']
opt-level = 2

[profile.release]
opt-level = 3

[features]
bevy_console = ["dep:bevy_console", "dep:clap"]