[package]
name = "prockit_volume"
version = "0.1.0"
edition = "2024"
categories = ["game-engines", "game-development", "graphics", "rendering"]
description = "A set of tools for procedurally generating assets and scenes for game development."
keywords = ["game", "engine", "graphics", "bevy"]
license = "LGPL-3.0-or-greater"
repository = "https://github.com/soundeffects/prockit/tree/main/crates/voxels"
documentation = "placeholder"

[dependencies]
bevy = { version = "0.17", features = ["trace"] }
noiz = "0.3.0"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.7"

# [profile.dev]
# opt-level = 1
#
# [profile.dev.package.bevy]
# features = ["dynamic_linking"]
#
# [profile.dev.package.'*']
# opt-level = 3
#
# [profile.release]
# codegen-units = 1
# lto = "thin"
# opt-level = 3

[[bench]]
name = "chunk"
harness = false
