[package]
name = "voxel_store"
version = "0.1.0"
edition = "2021"
categories = ["graphics", "rendering"]
description = "A flexible volumetric data structure for rendering and storage purposes."
exclude = [".github/", "crates/", "assets/"]
keywords = ["voxel", "volumetric", "vdb", "rendering"]
license = "MIT OR Apache-2.0"
repository = "placeholder"
documentation = "placeholder"
rust-version = "1.78.0"

[dependencies]
bevy = "0.13"
ndshape = "0.3"
bevy_console = { version = "0.11", optional = true }
clap = { version = "4.5", optional = true }

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.bevy]
features = ["dynamic_linking"]

[profile.release]
opt-level = 3

[features]
bevy_console = ["dep:bevy_console", "dep:clap"]