[package]
name = "voxel_store"
version = "0.1.0"
edition = "2021"
categories = ["graphics", "rendering"]
description = "A flexible volumetric data structure for rendering and storage purposes."
keywords = ["voxel", "volumetric", "vdb", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/soundeffects/rasterless"
documentation = "placeholder"

[dependencies]
ndshape = "0.3"
glam = "0.28"
bevy = { version = "0.14", optional = true }

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.bevy]
features = ["dynamic_linking"]

[profile.release]
opt-level = 3

[features]
bevy = ["dep:bevy"]